syntax = "proto2";

import "core.proto";

package core.point_addition;

message EncryptionKey {
    // Modulus
    required bytes n = 1;
    // Modulus ^ 2
    required bytes nn = 2;
}

message M1 {
    // Master's encrpytion key
    required EncryptionKey enc_key = 1;
    // E(x_q)
    required bytes e_x_q = 2;
    // E(-x_q)
    required bytes e_neg_x_q = 3;
    // E(y_q^2)
    required bytes e_y_q_pow_2 = 4;
    // E(-2y_q)
    required bytes e_neg_2_y_q = 5;
}

message M2 {
    // E((T * M_T)^p-3 mod p)
    required bytes e_t_mod_pow = 1;
}

message M3 {
    // E(A * M_A * B * M_B)
    required bytes e_ab_masked = 1;
}

message S1 {
    // N_A mod p
    required bytes n_a_mod_p = 1;
    // N_T mod p
    required bytes n_t_mod_p = 2;
    // E(A * M_A + N_A)
    required bytes e_a_masked = 3;
    // E(T * M_T + N_T)
    required bytes e_t_masked = 4;
}

message S2 {
    // N_B mod p
    required bytes n_b_mod_p = 1;
    // E(B * M_C + N_C)
    required bytes e_b_masked = 2;
}

message S3 {
    // E(PMS + S_q)
    required bytes e_pms_masked = 1;
}

message PointAdditionMessage {
    oneof msg {
        M1 m1 = 1;
        M2 m2 = 2;
        M3 m3 = 3;
        S1 s1 = 4;
        S2 s2 = 5;
        S3 s3 = 6;
    }
}